# modelcars

./: .gitignore  .travis.yml  README.md  install.sh  set-env.sh
catkin_ws_private/: .cproject  .project  launch-sequence.txt
catkin_ws_private/.catkin_tools/profiles/car/: config.yaml
catkin_ws_private/.catkin_tools/profiles/car_indigo/: config.yaml
catkin_ws_private/.catkin_tools/profiles/default/: config.yaml
catkin_ws_private/.catkin_tools/profiles/indigo_arm/: config.yaml
catkin_ws_private/.catkin_tools/profiles/indigo_x86/: config.yaml
catkin_ws_private/.catkin_tools/profiles/kinetic_x86/: config.yaml
catkin_ws_private/.catkin_tools/profiles/odroid/: build.yaml  config.yaml
catkin_ws_private/src/camera_matrix/: CMakeLists.txt  package.xml
catkin_ws_private/src/camera_matrix/config/: default.calib  test.calib
catkin_ws_private/src/camera_matrix/launch/: calibrate_offline_manual.launch  camera_matrix_publisher.launch  launch.launch  undistorted_image_publisher.launch
catkin_ws_private/src/camera_matrix/src/: camera_matrix.cpp  camera_matrix.hpp  camera_matrix_publisher.cpp  inverse_perspective_tf_publisher.cpp  offline_calibration.cpp  offline_calibration_manual.cpp  offline_calibration_ortho.cpp  undistorted_image_publisher.cpp
catkin_ws_private/src/camera_matrix_msgs/: CMakeLists.txt  package.xml
catkin_ws_private/src/camera_matrix_msgs/msg/: CameraMatrix.msg
catkin_ws_private/src/control/: CMakeLists.txt  package.xml
catkin_ws_private/src/control/config/: config_control.rviz  track01.csv  track02.csv  track03.csv
catkin_ws_private/src/control/launch/: auto.launch  control.launch  control_debug.launch  control_odroid.launch  control_odroid_debug.launch  control_wasd.launch
catkin_ws_private/src/control/src/: control_node.cpp  control_track_node.cpp  control_wasd.cpp  path_control_node.cpp
catkin_ws_private/src/cps2/: CMakeLists.txt  package.xml
catkin_ws_private/src/cps2/config/: config.rviz
catkin_ws_private/src/cps2/launch/: localization_publisher.launch  localization_publisher_debug.launch  localization_publisher_debug_static.launch  rviz.launch  test_dbscan.launch  test_image_distance.launch  test_image_distance_bf.launch  test_image_distance_smart.launch  test_image_evaluator.launch  test_localization_publisher.launch  test_map_transforms.launch  test_static_particles.launch
catkin_ws_private/src/cps2/src/: dbscan.hpp  dbscan_main.cpp  image_evaluator.cpp  image_evaluator.hpp  localization_publisher.cpp  map.cpp  map.hpp  map_piece.hpp  particle.hpp  particle3f.cpp  particle3f.hpp  particle_filter.cpp  particle_filter.hpp  particle_filter_dummy.hpp  test_image_distance.cpp  test_image_evaluator.cpp  test_map_transforms.cpp
catkin_ws_private/src/cps2/src/hamid/: Particle.h  ParticleFilter.h
catkin_ws_private/src/cps2/src/test/: fake_localization.cpp  test_dbscan.cpp  test_image_distance.cpp  test_image_distance_bf.cpp  test_image_distance_smart.cpp  test_image_evaluator.cpp  test_map_transforms.cpp  trajectory_plotter.cpp
catkin_ws_private/src/cps2_particle_msgs/: CMakeLists.txt  package.xml
catkin_ws_private/src/cps2_particle_msgs/msg/: particle_msgs.msg
catkin_ws_private/src/fisheye_camera_matrix/: CMakeLists.txt  package.xml
catkin_ws_private/src/fisheye_camera_matrix/config/: default.calib  test.calib
catkin_ws_private/src/fisheye_camera_matrix/include/fisheye_camera_matrix/: camera_matrix.hpp  perspective_projection.h  perspective_projectionRequest.h  perspective_projectionResponse.h
catkin_ws_private/src/fisheye_camera_matrix/src/: camera_matrix.cpp  camera_matrix_publisher.cpp  offline_calibration_manual.cpp  undistorted_image_publisher.cpp
catkin_ws_private/src/fisheye_camera_matrix_msgs/: CMakeLists.txt
catkin_ws_private/src/logging/: CMakeLists.txt  package.xml
catkin_ws_private/src/logging/launch/: log_generator.launch  log_player.launch  log_recorder.launch
catkin_ws_private/src/logging/src/: log_generator.cpp
catkin_ws_private/src/map/: CMakeLists.txt  package.xml
catkin_ws_private/src/map/src/: create_map.cpp
catkin_ws_private/src/test/: CMakeLists.txt  package.xml
catkin_ws_private/src/test/config/: config.rviz  config_control.rviz
catkin_ws_private/src/test/launch/: debug_static.launch  launch.launch
catkin_ws_private/src/test/src/: test.cpp  trajectory_plotter.cpp
catkin_ws_private/src/trajectory_movement/: CMakeLists.txt  package.xml
catkin_ws_private/src/trajectory_movement/launch/: auto.launch  trajectory_movement.launch
catkin_ws_private/src/trajectory_movement/src/: trajectory_movement_node.cpp
crosscompile/: config.yaml  install.sh
logs/: track01  track02  track03  track04  track05  track06  track07  track08  track09  track10
